# C_HTTP

./: CMakeLists.txt  main.c  test.py
include/: header.h  http_log.h  http_method.h  http_server.h  request.h  response.h  response_brut_value.h  router.h  router_utils.h
include/router/: router.h  router_utils.h
lib/circular_buffer/: CMakeLists.txt
src/: header.c  http_log.c  http_method.c  http_server_init.c  http_server_run.c  request.c  response.c  router.c  router_get_handler.c  router_utils.c
src/exec/: main.c
src/python/: wrapper.c
src/router/: router.c  router_get_handler.c  router_utils.c
src/utils/: http_log.c  http_method.c
